--- a/search-engine/requirements.txt
+++ b/search-engine/requirements.txt
@@ -10,3 +10,5 @@ llama-index-embeddings-instructor==0.1.3
 sentence-transformers==2.2.2
 faiss-cpu==1.8.0
 llama-index-vector-stores-faiss==0.1.2
+openai==1.30.2
+llama-index-llms-openai==0.1.20
