--- a/search-engine/requirements.txt
+++ b/search-engine/requirements.txt
@@ -12,3 +12,9 @@ faiss-cpu==1.8.0
 llama-index-vector-stores-faiss==0.1.2
 openai==1.30.2
 llama-index-llms-openai==0.1.20
+gradio==4.19.2
+pymongo
+psycopg2-binary
+langchain==0.1.8
+langchain-community==0.0.21
+langchain-core==0.1.24
